EVS-775 - Minor refactor